[package]
name = "esponquen"
version = "0.1.0"
edition = "2024"

[lib]
name = "esponquen"
path = "src/lib.rs"

[[bin]]
name = "esponquen"
path = "src/main.rs"

[dependencies]
sherpa-rs = "0.6.8"
cpal = "0.16.0"
hound = "3.5.1"
rdev = { version = "0.5.3", features = ["unstable_grab"] }
enigo = "0.6.1"
once_cell = "1.21.3"
tray-icon = "0.21.2"
winit = "0.30"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "wincon"] }
